# daily_dose_of_paper

./: .gitignore  DEVELOPMENT.md  README.md  config.json  index.html  package.json
scripts/: extract_pdf_info.py  fetch_papers.py  parse_pdf.py  requirements.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AllPapers.tsx  AnalysisStatusBadge.tsx  CategoryBadge.tsx  DailyReview.tsx  Dashboard.tsx  ImportPaperDetail.tsx  MarkdownRenderer.tsx  PaperDetail.tsx  PaperList.tsx  ProgressBar.tsx  ProjectDetail.tsx  RatingDisplay.tsx  Settings.tsx  Sidebar.tsx  StatsCard.tsx
src/contexts/: PapersContext.tsx
src/hooks/: useConfig.ts  usePapers.ts
src/types/: index.ts
src/utils/: api.ts
